NetBSD Problem Report #49423

From martin@aprisoft.de  Thu Nov 27 11:56:33 2014
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id F2775A6553
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 27 Nov 2014 11:56:32 +0000 (UTC)
Message-Id: <20141127115553.14CC9ED0E4F@emmas.aprisoft.de>
Date: Thu, 27 Nov 2014 12:55:53 +0100 (CET)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: ping for small packets does not work in -7 or -current
X-Send-Pr-Version: 3.95

>Number:         49423
>Category:       bin
>Synopsis:       ping for small packets does not work in -7 or -current
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Nov 27 12:00:00 +0000 2014
>Closed-Date:    Sun Dec 14 19:58:55 +0000 2014
>Last-Modified:  Tue Apr 14 05:30:01 +0000 2015
>Originator:     Martin Husemann
>Release:        NetBSD 7.99.1
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD whoever-brings-the-night.aprisoft.de 7.99.1 NetBSD 7.99.1 (WHOEVER) #29: Tue Nov 4 19:09:59 CET 2014 martin@seven-days-to-the-wolves.aprisoft.de:/usr/src/sys/arch/sparc64/compile/WHOEVER sparc64
Architecture: sparc64
Machine: sparc64
>Description:

Try to ping -s 20 from a netbsd-7 or netbsd-current system any other machine
that answers ping and watch the garbage error message.

>How-To-Repeat:

round-trip min/avg/max/stddev = 0.087918/0.087918/0.087918/0.000000 ms
[~] martin@whoever-brings-the-night > ping -c 2 -s 20 localhost
PING localhost (127.0.0.1): 20 data bytes
24 bytes from 127.0.0.1: icmp_seq=0 ttl=255 time=0.086835 ms
wrong data byte #16 should have been 0 but was 0x6f
24 bytes from 127.0.0.1: icmp_seq=1 ttl=255 time=0.069668 ms
wrong data byte #16 should have been 0 but was 0x6f

----localhost PING Statistics----
2 packets transmitted, 2 packets received, 0.0% packet loss
round-trip min/avg/max/stddev = 0.069668/0.078252/0.086835/0.012139 ms

The "wrong byte" value seems to be mostly random, sometimes it even is 0.

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49423 CVS commit: src/sbin/ping
Date: Thu, 27 Nov 2014 14:43:58 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Thu Nov 27 19:43:58 UTC 2014

 Modified Files:
 	src/sbin/ping: ping.c

 Log Message:
 PR/49423: Martin Husemann: ping for small packets does not work in -7 or
 -current
 XXX: pullup 7?


 To generate a diff of this commit:
 cvs rdiff -u -r1.107 -r1.108 src/sbin/ping/ping.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sun, 14 Dec 2014 19:58:55 +0000
State-Changed-Why:
Christos fixed it.


From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49423 CVS commit: [netbsd-7] src/sbin/ping
Date: Tue, 14 Apr 2015 05:26:21 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Tue Apr 14 05:26:20 UTC 2015

 Modified Files:
 	src/sbin/ping [netbsd-7]: ping.c

 Log Message:
 Pull up following revision(s) (requested by christos in ticket #692):
 	sbin/ping/ping.c: revisions 1.108, 1.109
 PR/49423: Martin Husemann: ping for small packets does not work in -7 or
 -current
 --
 Adjust default packet size to 56 data bytes (64 total).
 Make error messages consistent.


 To generate a diff of this commit:
 cvs rdiff -u -r1.107 -r1.107.4.1 src/sbin/ping/ping.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.