PR/49423: Martin Husemann: ping for small packets does not work in -7 or -current XXX: pullup 7?